# YoutubeAutomation

./: .editorconfig  .gitattributes  .gitignore  .tool-versions  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  context.md  design.md  future_tasks.md  package-lock.json  prompt.md  prompttracking.md  pullrequest_merge_conflict.md  readme.md  rust-toolchain.toml
.codex/: Dockerfile  bootstrap.sh  config.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-devcontainer.yml  ci.yml  package.yml
.husky/: pre-commit
design/wireframes/: README.md  batch_screen.md  main_screen.md
docs/: AI_MODEL_TRAINING_POLICY.md  FUTURE_FEATURES.md  SELF_REFLECTION.md  context.md  deep_dive.md  design.md  index.md  merge_conflict.md  prompttracking.md  pullrequest_merge_conflict.md  troubleshooting.md
scripts/: bootstrap.sh  generate-schema.ts  install_tauri_deps.sh  install_tauri_deps_macos.sh  install_tauri_deps_windows.ps1  package.sh  setup.sh  setup_codex.sh  setup_windows.ps1  update_locales.js
ytapp/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ytapp/.husky/: pre-commit
ytapp/.husky/_/: husky.sh
ytapp/public/: index.html
ytapp/scripts/: a11y-test.js  postinstall.js  run-tauri.js  run-tauri.js.bak  setup_windows.ps1  # (edit to ensure test dependencies are installed)
ytapp/shared/: languages.json
ytapp/src/: App.tsx  cli.ts  i18n.ts  icons.tsx  main.tsx  schema.ts  style.css  theme.css
ytapp/src-tauri/: Cargo.toml  tauri.conf.json
ytapp/src-tauri/.cargo/: config.toml
ytapp/src-tauri/capabilities/: default.json
ytapp/src-tauri/icons/: README.md  icon.icns
ytapp/src-tauri/src/: encrypted_storage.rs  job_queue.rs  language.rs  logger.rs  main.rs  model_check.rs  schema.rs  token_store.rs
ytapp/src/utils/: csv.ts  (+3 more)
ytapp/tests/: cancel.test.ts  cancel_transcription.test.ts  clear_logs.test.ts  cli_csv.test.ts  cli_edit_srt.test.ts  cli_generate_cancel.test.ts  cli_is_signed_in_false.test.ts  cli_is_signed_in_true.test.ts  cli_list_fonts.test.ts  cli_list_languages.test.ts  cli_list_playlists.test.ts  cli_logs_clear.test.ts  cli_logs_filter.test.ts  cli_logs_output.test.ts  cli_queue.test.ts  cli_queue_add_batch.test.ts  cli_queue_clear_completed.test.ts  cli_queue_clear_failed.test.ts  cli_queue_export.test.ts  cli_queue_import.test.ts  cli_queue_move.test.ts  cli_queue_status.test.ts  cli_shift_srt.test.ts  cli_signin.test.ts  cli_signout.test.ts  cli_thumbnail.test.ts  cli_transcribe_cancel.test.ts  cli_upload_cancel.test.ts  csv.test.ts  generate_batch_csv.test.ts  get_logs_filter.test.ts  notify.test.ts  profile.test.ts  queue.test.ts  queue_clear_failed.test.ts  queue_clear_finished.test.ts  queue_status.test.ts  run-all.ts  settings.test.ts  signout.test.ts  (+5 more)
(+142 files in other folders)
