[package]
name = "ytapp"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT"

[dependencies]
tauri-plugin-process = "2"
tauri = { version = "2", default-features = false , features = ["wry"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
whisper_cli = "0.1.5"
tokio = { version = "1", features = ["full"] }
google-youtube3 = { version = "=6.0.0" }
hyper-rustls = "0.27"
hyper-util = "0.1"
yup-oauth2 = "=11.0.0"
anyhow = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand_core = "0.6"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
notify = "8"
once_cell = "1"
futures = "0.3"
mime_guess = "2"
indexmap = { version = "1", features = ["std"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
